# klv-bridge-eth-sc-rs

./: .gitignore  Cargo.toml  README.md  build-wasm.sh
bridge-proxy/: Cargo.toml  sc-config.toml
bridge-proxy/meta/: Cargo.toml
bridge-proxy/meta/src/: main.rs
bridge-proxy/scenarios/: bridge_proxy_execute_crowdfunding.scen.json
bridge-proxy/src/: bridge-proxy.rs  bridge_proxy_contract_proxy.rs  config.rs
bridge-proxy/tests/: bridge_proxy_blackbox_test.rs
bridge-proxy/tests/test-contract/: crowdfunding-kda.kleversc.json
bridge-proxy/wasm/: Cargo.toml
bridge-proxy/wasm/src/: lib.rs
bridged-tokens-wrapper/: Cargo.toml  sc-config.toml
bridged-tokens-wrapper/meta/: Cargo.toml
bridged-tokens-wrapper/meta/src/: main.rs
bridged-tokens-wrapper/scenarios/: add_wrapped_token.scen.json  blacklist_token.scen.json  remove_wrapped_token.scen.json  setup.scen.json  unwrap_token.scen.json  whitelist_token.scen.json  wrap_token.scen.json
bridged-tokens-wrapper/src/: dfp_big_uint.rs  events.rs  kda_safe_proxy.rs  lib.rs
bridged-tokens-wrapper/tests/: bridged_tokens_wrapper_whitebox_test.rs  dfp_big_uint_test.rs  scenario_go_test.rs
bridged-tokens-wrapper/wasm/: Cargo.toml
bridged-tokens-wrapper/wasm/src/: lib.rs
common/fee-estimator-module/: Cargo.toml
common/fee-estimator-module/src/: lib.rs  price_aggregator_proxy.rs
common/max-bridged-amount-module/: Cargo.toml
common/max-bridged-amount-module/src/: lib.rs
common/staking-module/: Cargo.toml
common/staking-module/src/: lib.rs
common/token-module/: Cargo.toml
common/token-module/src/: lib.rs
common/transaction/: Cargo.toml
common/transaction/src/: lib.rs  transaction_status.rs
common/tx-batch-module/: Cargo.toml
common/tx-batch-module/src/: batch_status.rs  lib.rs  tx_batch_mapper.rs
kda-safe/: Cargo.toml  sc-config.toml
kda-safe/meta/: Cargo.toml
kda-safe/meta/src/: main.rs
kda-safe/scenarios/: add_refund_batch.scen.json  create_another_tx_ok.scen.json  create_another_tx_too_late_for_batch.scen.json  create_transaction_batch_3_tokens_mixed_decimals.scen.json  create_transaction_eth_token_with_conversion.scen.json  create_transaction_mixed_tokens_with_conversion.scen.json  create_transaction_no_decimals_configured.scen.json  create_transaction_ok.scen.json  create_transaction_over_max_amount.scen.json  create_transaction_precision_loss_max_amount.scen.json  create_transaction_precision_loss_too_small.scen.json  distribute_fees.scen.json  execute_batch_both_rejected.scen.json  execute_batch_both_success.scen.json  execute_batch_one_success_one_rejected.scen.json  execute_transaction_rejected.scen.json  execute_transaction_success.scen.json  fee_accumulation_with_decimal_conversion.scen.json  get_next_pending_tx.scen.json  get_next_tx_batch.scen.json  get_next_tx_batch_too_early.scen.json  refund_transaction_eth_token_with_conversion.scen.json  round_trip_eth_token_execute_success.scen.json  set_token_decimals_invalid_config.scen.json  setup_accounts.scen.json  zero_fees.scen.json
kda-safe/src/: kda_safe.rs
kda-safe/tests/: kda_safe_scenario_rs_test.rs  scenario_go_test.rs
kda-safe/wasm/: Cargo.toml
kda-safe/wasm/src/: lib.rs
multi-transfer-kda/: Cargo.toml  sc-config.toml
multi-transfer-kda/meta/: Cargo.toml
multi-transfer-kda/meta/src/: main.rs
multi-transfer-kda/scenarios/: batch_transfer_both_executed.scen.json  batch_transfer_both_failed.scen.json  batch_transfer_one_executed_one_failed.scen.json  batch_transfer_to_frozen_account.scen.json  batch_transfer_with_wrapping.scen.json  setup_accounts.scen.json  transfer_fail_mint_burn_not_allowed.scen.json  transfer_ok.scen.json  two_transfers_same_token.scen.json
multi-transfer-kda/src/: bridged_tokens_wrapper_proxy.rs  kda_safe_proxy.rs  lib.rs  multi_transfer_proxy.rs
multi-transfer-kda/tests/: multi_transfer_blackbox_test.rs  multi_transfer_esdt_scenario_rs_test.rs  scenario_go_test.rs
multi-transfer-kda/wasm/: Cargo.toml
multi-transfer-kda/wasm/src/: lib.rs
multisig/: Cargo.toml  README.md  sc-config.toml
multisig/interaction/: script-v3-release.sh
multisig/interaction/config/: aggregator-snippets.sh  check-curl-result.sh  configs.cfg  issue-tokens-snippets.sh  mainnet-release-v3.sh  menu_functions.cfg  multisig-snippets.sh  multitransfer-snippets.sh  proxy-snippets.sh  relayers-snippets.sh  safe-snippets.sh  testing.sh  wrapped-snippets.sh
multisig/interaction/release-v3/: config-setter.cfg  menu_functions.cfg
multisig/meta/: Cargo.toml
multisig/meta/src/: main.rs
multisig/scenarios/: change_token_config.scen.json  create_klever_to_ethereum_tx_batch.scen.json  ethereum_to_klever_relayer_call_data_several_tx_test.scen.json  ethereum_to_klever_relayer_query2_test.scen.json  ethereum_to_klever_relayer_query_test.scen.json  ethereum_to_klever_tx_batch_ok.scen.json  ethereum_to_klever_tx_batch_ok_call_data_encoded.scen.json  ethereum_to_klever_tx_batch_rejected.scen.json  ethereum_to_klever_tx_batch_without_data.scen.json  execute_klever_to_ethereum_tx_batch.scen.json  reject_klever_to_ethereum_tx_batch.scen.json  setup.scen.json  unstake.scen.json
multisig/src/: action.rs  bridged_tokens_wrapper_proxy.rs  events.rs  kda_safe_proxy.rs  lib.rs  multi_transfer_kda_proxy.rs  multisig_general.rs  multisig_proxy.rs  queries.rs  setup.rs  storage.rs  user_role.rs  util.rs
multisig/tests/: multisig_blackbox_test.rs  multisig_scenario_rs_test.rs  scenario_go_test.rs
multisig/wasm/: Cargo.toml
price-aggregator/: Cargo.toml
price-aggregator/meta/: Cargo.toml
price-aggregator/scenarios/: deploy.scen.json  get_latest_price_feed.scen.json  oracle_gwei_in_eth_and_kda_submit.scen.json  oracle_submit.scen.json  stress_submit_test.scen.json  stress_submit_with_gas_schedule_test.scen.json
price-aggregator/src/: events.rs  lib.rs  median.rs  price_aggregator_data.rs
price-aggregator/tests/: price_aggregator_blackbox_test.rs  price_aggregator_proxy.rs  price_aggregator_scenario_go_test.rs  price_aggregator_stress_blackbox.rs  price_aggregator_whitebox_test.rs
price-aggregator/wasm/: Cargo.toml
(+10 files in other folders)
