[workspace]
resolver = "2"

members = [
  "multi-transfer-kda",
  "multi-transfer-kda/meta",
  "bridge-proxy",
  "bridge-proxy/meta",
  "multisig",
  "multisig/meta",
  "bridged-tokens-wrapper",
  "bridged-tokens-wrapper/meta",
  "kda-safe",
  "kda-safe/meta",
  "price-aggregator",
  "price-aggregator/meta"
]
