[package]
name = "bridge-proxy"
version = "0.0.0"
authors = ["Costin Carabaș <costin.carabas@gmail.com>"]
edition = "2018"
publish = false

[lib]
path = "src/bridge-proxy.rs"

[dependencies.transaction]
path = "../common/transaction"

[dependencies.eth-address]
path = "../common/eth-address"

[dependencies.token-module]
path = "../common/token-module"

[dependencies.tx-batch-module]
path = "../common/tx-batch-module"

[dependencies.kda-safe]
path = "../kda-safe"

[dependencies.bridged-tokens-wrapper]
path = "../bridged-tokens-wrapper"

[dependencies.klever-sc]
version = "0.44.0"
path="../../klever-vm-sdk-rs-internal/framework/base"

[dependencies.crowdfunding-kda]
path="../../klever-vm-sdk-rs-internal/contracts/examples/crowdfunding-kda"

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.klever-sc-scenario]
version = "0.44.0"
path="../../klever-vm-sdk-rs-internal/framework/scenario"

[dependencies.klever-sc-modules]
version = "0.44.0"
path="../../klever-vm-sdk-rs-internal/contracts/modules"