[package]
name = "multi-transfer-kda"
version = "0.0.0"
authors = ["you"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.transaction]
path = "../common/transaction"

[dependencies.tx-batch-module]
path = "../common/tx-batch-module"

[dependencies.eth-address]
path = "../common/eth-address"

[dependencies.max-bridged-amount-module]
path = "../common/max-bridged-amount-module"

[dependencies.bridged-tokens-wrapper]
path = "../bridged-tokens-wrapper"

[dependencies.kda-safe]
path = "../kda-safe"

[dependencies.token-module]
path = "../common/token-module"

[dependencies.klever-sc]
version = "0.44.0"
path="../../klever-vm-sdk-rs-internal/framework/base"

[dev-dependencies.klever-sc-scenario]
version = "0.44.0"
path="../../klever-vm-sdk-rs-internal/framework/scenario"

[dependencies.klever-sc-modules]
version = "0.44.0"
path="../../klever-vm-sdk-rs-internal/contracts/modules"