[package]
name = "multisig"
version = "0.0.0"
authors = ["Andrei Marinica <andrei.marinica@elrond.com>, Dorin Iancu <dorin.iancu@elrond.com>", "Klever <contact@klever.com>"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.transaction]
path = "../common/transaction"

[dependencies.eth-address]
path = "../common/eth-address"

[dependencies.fee-estimator-module]
path = "../common/fee-estimator-module"

[dependencies.token-module]
path = "../common/token-module"

[dependencies.tx-batch-module]
path = "../common/tx-batch-module"

[dependencies.max-bridged-amount-module]
path = "../common/max-bridged-amount-module"

[dependencies.kda-safe]
path = "../kda-safe"

[dependencies.multi-transfer-kda]
path = "../multi-transfer-kda"

[dependencies.bridged-tokens-wrapper]
path = "../bridged-tokens-wrapper"

[dependencies.klever-sc]
version = "0.44.0"
path="../../klever-vm-sdk-rs-internal/framework/base"

[dependencies.klv-price-aggregator-sc]
path = "../price-aggregator/"

[dev-dependencies.klever-sc-scenario]
version = "0.44.0"
path="../../klever-vm-sdk-rs-internal/framework/scenario"

[dependencies.klever-sc-modules]
version = "0.44.0"
path="../../klever-vm-sdk-rs-internal/contracts/modules"