[package]
name = "klv-price-aggregator-sc"
version = "0.57.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.klever-sc]
version = "0.43.3"
path="../../klever-vm-sdk-rs-internal/framework/base"

[dependencies.staking-module]
path = "../common/staking-module"

[dependencies.klever-sc-modules]
version = "0.43.3"
path="../../klever-vm-sdk-rs-internal/contracts/modules"

[dev-dependencies.klever-sc-scenario]
version = "0.43.3"
path="../../klever-vm-sdk-rs-internal/framework/scenario"


[dependencies]
arrayvec = { version = "0.7", default-features = false }
rand = { version = "0.8.5" }
getrandom = { version = "0.2", features = ["js"] }
