[package]
name = "staking-module"
version = "0.0.0"
authors = ["MultiversX <contact@multiversx.com>","Klever <contact@klever.com>"]
edition = "2018"

[dependencies.klever-sc]
version = "0.43.3"
path="../../../klever-vm-sdk-rs-internal/framework/base"

[dev-dependencies.klever-sc-scenario]
version = "0.43.3"
path="../../../klever-vm-sdk-rs-internal/framework/scenario"
