[package]
name = "token-module"
version = "0.0.0"
authors = ["dorin-iancu <dorin.iancu@elrond.com>","Klever <contact@klever.com>"]
edition = "2018"

[dependencies.fee-estimator-module]
path = "../fee-estimator-module"

[dependencies.klever-sc]
version = "0.44.0"
path="../../../klever-vm-sdk-rs-internal/framework/base"

[dev-dependencies.klever-sc-scenario]
version = "0.44.0"
path="../../../klever-vm-sdk-rs-internal/framework/scenario"
