[package]
name = "transaction"
version = "0.0.0"
authors = ["dorin-iancu <dorin.iancu@elrond.com>","Klever <contact@klever.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies.eth-address]
path = "../eth-address"

[dependencies.klever-sc]
version = "0.44.0"
path="../../../klever-vm-sdk-rs-internal/framework/base"
