[package]
name = "tx-batch-module"
version = "0.0.0"
authors = ["you"]
edition = "2018"

[dependencies.transaction]
path = "../transaction"

[dependencies.klever-sc]
version = "0.43.3"
path="/home/remoh/Documents/work-klever/klever-vm-sdk-rs-internal/framework/base"

[dev-dependencies.klever-sc-scenario]
version = "0.43.3"
path="/home/remoh/Documents/work-klever/klever-vm-sdk-rs-internal/framework/scenario"
