[package]
name = "multisig-meta"
version = "0.0.0"
authors = ["Andrei Marinica <andrei.marinica@elrond.com>, Dorin Iancu <dorin.iancu@elrond.com>"]
edition = "2018"
publish = false

[dependencies.multisig]
path = ".."

[dependencies.klever-sc-meta]
version = "0.44.0"
path = "../../../klever-vm-sdk-rs-internal/framework/meta"
default-features = false
