[package]
name = "klv-price-aggregator-sc-meta"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies.klv-price-aggregator-sc]
path = ".."


[dependencies.klever-sc]
version = "0.43.3"
path="/home/remoh/Documents/work-klever/klever-vm-sdk-rs-internal/framework/base"


[dependencies.klever-sc-meta]
version = "0.43.3"
path = "/home/remoh/Documents/work-klever/klever-vm-sdk-rs-internal/framework/meta"
default-features = false
